移动端上传图片存图片路径时截取掉多余的一个分号

--- a/888repair/Views/Repair/ITRepairMobileVw.cshtml
+++ b/888repair/Views/Repair/ITRepairMobileVw.cshtml
@@ -274,6 +274,9 @@
                         var fileName = names[0];
                         fileNames += fileName + ";";
                     }
+                    if (fileNames.substring(fileNames.length - 2) == ";;") {
+                        fileNames = fileNames.substring(0, fileNames.length - 1);
+                    }
                 }
             }
 
