--- a/888repair/Views/Repair/LogRepairVw.cshtml
+++ b/888repair/Views/Repair/LogRepairVw.cshtml
@@ -335,7 +335,7 @@
 
         reloadDate();
 
-        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHHmmss");
+        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHH");
 
         var username = '@(Session["fullname"])';
         var empno = '@(Session["EmpNo"])';
