移动端个人问题列表

--- a/888repair/Views/Home/MobileIndex.cshtml
+++ b/888repair/Views/Home/MobileIndex.cshtml
@@ -284,7 +284,7 @@
                         i = 0;
                     break;
                 case "#personalProblem":
-                    pathn = "@(Url.Action("RersonalProblemIndex", "Repair"))",
+                    pathn = "@(Url.Action("RPMobileIndex", "Repair"))",
                         i = 0;
                     break;
                 case "#replyProblem":
