增加完成时回复图片的功能

--- a/888repair/Views/Repair/ProblemDetailVw.cshtml
+++ b/888repair/Views/Repair/ProblemDetailVw.cshtml
@@ -113,6 +113,8 @@
                     <div class="layui-input-inline">
                         <textarea id="ReplyContent" style="font-size:large;width:300%;height:170px" readonly />
                     </div>
+                    <div id="imgId2">
+                    </div>
                 </td>
             </tr>
             <tr>
@@ -171,6 +173,23 @@
                 img.className = "imgview";
                 img.src = "../" + name;
                 imgId.appendChild(img);
+            }
+        }
+
+        if (localStorage.getItem("ReplyPhoto") != null && localStorage.getItem("ReplyPhoto") != '' && localStorage.getItem("ReplyPhoto") != 'null') {
+            // var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
+            var ReplyPhotoS = localStorage.getItem("ReplyPhoto");
+            ReplyPhotoS = ReplyPhotoS.substring(0, ReplyPhotoS.length - 1);
+            var files2 = ReplyPhotoS.split(";");
+            var imgId2 = document.getElementById("imgId2");
+            // var url = root;
+            for (var i = 0; i < files2.length; i++) {
+                var name2 = files2[i];
+                var img2 = document.createElement("img");
+                img2.style = "width:120px;height:120px;";
+                img2.className = "imgview";
+                img2.src = "../" + name2;
+                imgId2.appendChild(img2);
             }
         }
     }
