--- a/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
+++ b/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
@@ -113,6 +113,8 @@
                     <div class="layui-input-inline">
                         <textarea id="ReplyContent" style="font-size:large;width:300%;height:170px" readonly />
                     </div>
+                    <div id="imgId2">
+                    </div>
                 </td>
             </tr>
             <tr height="200px">
@@ -126,12 +128,13 @@
             <tr>
                 <td align="right" width="40%" style="background-color:lightgrey">
                     <label style="color:red">*</label>&nbsp;&nbsp;<label style="font-size:large;color:orangered;">执行状态：</label>
+                    
                 </td>
                 <td width="60%">
                     <br />
                     <div class="layui-form layui-form-pane" style="margin-left:20px">
                         <div class="layui-input-inline">
-                            <select ID="OpStatus" name="OpStatus" lay-verify="required">
+                            <select ID="OpStatus" name="OpStatus" lay-verify="required" lay-filter="OpStatus">
                                 <option value=""></option>
                             </select>
                         </div>
@@ -143,6 +146,42 @@
                         <button type="button" id="RejectEnd" class="layui-btn layui-btn-primary layui-border-green" style="margin-left:20px">驳回至使用者</button>
                     </div>
                     <br />
+                    <div class="layui-form-item" id="replyPic" hidden="hidden">
+                        <div class="layui-input-inline" style="width:100%">
+                            <div class="layui-upload">
+                                <button type="button" class="layui-btn" id="testList">选择多文件</button>
+                                <div class="layui-upload-list" style="max-width: 1000px;">
+                                    <table class="layui-table">
+                                        <colgroup>
+                                            <col>
+                                            <col width="150">
+                                            <col width="150">
+                                            <col width="150">
+                                        </colgroup>
+                                        <thead>
+                                            <tr>
+                                                <th field="fileName">文件名</th>
+                                                <th>预览图</th>
+                                                <th>大小</th>
+                                                <th>操作</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="demoList"></tbody>
+                                    </table>
+                                </div>
+                                <div id="buttonDiv" hidden="hidden">
+                                    <button type="button" class="layui-btn" id="testListAction">开始上传</button>
+                                </div>
+                            </div>
+                            <br />
+                            <br />
+                            <label style="color:red">
+                                Do not upload photos with the same name, or they will be overwritten,The file name should not be too long
+                                <br />
+                                ※上传照片请勿有相同名称，不然会覆盖之前的上传照片,文件名不宜过长
+                            </label>
+                        </div>
+                    </div>
                 </td>
             </tr>
             <tr height="30px">
@@ -241,16 +280,37 @@
                 imgId.appendChild(img);
             }
         }
+
+        if (localStorage.getItem("ReplyPhoto") != null && localStorage.getItem("ReplyPhoto") != '' && localStorage.getItem("ReplyPhoto") != 'null') {
+            // var root = window.location.pathname == "/" ? '' : window.location.pathname;//兼容本地测试
+            var ReplyPhotoS = localStorage.getItem("ReplyPhoto");
+            ReplyPhotoS = ReplyPhotoS.substring(0, ReplyPhotoS.length - 1);
+            var files2 = ReplyPhotoS.split(";");
+            var imgId2 = document.getElementById("imgId2");
+            // var url = root;
+            for (var i = 0; i < files2.length; i++) {
+                var name2 = files2[i];
+                var img2 = document.createElement("img");
+                img2.style = "width:120px;height:120px;";
+                img2.className = "imgview";
+                img2.src = "../" + name2;
+                imgId2.appendChild(img2);
+            }
+        }
     }
 
 
-    layui.use(['table', 'dropdown', 'form'], function () {
+    layui.use(['table', 'upload', 'dropdown', 'form'], function () {
         var $ = layui.$;
         var table = layui.table;
         var form = layui.form;
         var layer = layui.layer;
+        var upload = layui.upload;
 
         loadOption();
+
+        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHH");
+        var empno = '@(Session["EmpNo"])';
 
         loadImg();
         
@@ -328,6 +388,16 @@
             $("#DamageText2").show();
         }
 
+        //隐藏上传完修图片的div
+        form.on('select(OpStatus)', function (data) {
+            var status = data.value;
+            if (status == "complete") {
+                $("#replyPic").show();
+            } else {
+                $("#replyPic").hide();
+            }
+        })
+        
         if (localStorage.getItem("Status") == "complete" || localStorage.getItem("Status") == "rejectend" ) {
             $('#OpStatus').addClass("layui-disabled").attr("disabled", "disabled");
             $('#TransferProblem').addClass("layui-disabled").attr("disabled", "disabled");
@@ -373,6 +443,24 @@
         //localStorage.clear();
 
         form.on('submit(demo1)', function () {
+            var filesUpload = $("#buttonDiv");
+            var filesUploadBtn = filesUpload.find('button')[0];
+            filesUploadBtn.click();
+
+            var data = form.val('example');
+            var filesUploadDemo = $("#demoList");
+            var fileNames = '';
+            if (filesUploadDemo != null && filesUploadDemo != undefined) {
+                var str = filesUploadDemo[0].innerText;
+                if (str != null && str != '') {
+                    var files = str.split("\n");
+                    for (var i = 0; i < files.length; i++) {
+                        var names = files[i].split("\t");
+                        var fileName = names[0];
+                        fileNames += fileName + ";";
+                    }
+                }
+            }
             var model = {
                 "NewReplyContent": $("#NewReplyContent").val(),
                 "ReplyContent": $("#ReplyContent").val(),
@@ -380,6 +468,7 @@
                 "RepairId": localStorage.getItem("RepairId"),
                 "ChargeEmpname": localStorage.getItem("ChargeEmpname"),
                 "ChargeEmpno": localStorage.getItem("ChargeEmpno"),
+                "ReplyPhoto": fileNames,
             };
             if ($("#OpStatus").val() == localStorage.getItem("Status"))
             {
@@ -630,6 +719,89 @@
                     layer.closeAll();
                 }
             });
+        });
+
+         //演示多文件列表
+        var uploadListIns = upload.render({
+            elem: '#testList'
+            , elemList: $('#demoList') //列表元素对象
+            , url: "@(Url.Action("ReplyPicUpload", "Repair"))"
+            , accept: 'file'
+            , exts: 'JPG|JPEG|PNG|GIF' //只允许上传压缩文件
+            , multiple: true
+           // , number: 3
+          //  , size: 1024 //限制文件大小，单位 KB
+            , auto: false
+            , bindAction: '#testListAction'
+            , choose: function (obj) {
+                var that = this;
+                var files = this.files = obj.pushFile(); //将每次选择的文件追加到文件队列
+                //读取本地文件
+                obj.preview(function (index, file, result) {
+                    
+                    var tr = $(['<tr id="upload-' + index + '">'
+                        , '<td>' + datetime + '_' + empno + "_" + file.name + '</td>'
+                       // , '<td>' + file.name + '</td>'
+                        , '<td>' + '<img src="' + result + '" alt="' + file.name + '" class="layui-upload-img">' + '</td>'
+                        , '<td>' + (file.size / 1024).toFixed(1) + 'kb</td>'
+                        , '<td>'
+                        , '<button class="layui-btn layui-btn-xs layui-btn-danger demo-delete">删除</button>'
+                        , '</td>'
+                        , '</tr>'].join(''));
+
+
+                    //单个重传
+                    tr.find('.demo-reload').on('click', function () {
+                        obj.upload(index, file);
+                    });
+
+                    //判断上传每个图片大小
+                    if (file.size > 1024 * 1024) {       
+                        delete files[index];             //过大删除指定图片    
+                        layer.msg('文件大小不得超过1M', { icon: 2, shift: 6 });
+                         var id = "upload-" + index;
+                        var tr = $("tr[id=" + id + "]");
+                        tr.remove();
+                    }
+
+                    var trMumber = $("#demoList").find("tr").length + 1;
+                    if (trMumber > 3) {
+                        delete files[index];      
+                        var id = "upload-" + index;
+                        var tr = $("tr[id=" + id + "]");
+                        tr.remove();
+                        layer.msg('文件个数不得超过3个', { icon: 2, shift: 6 });
+                    }
+
+                    //删除
+                    tr.find('.demo-delete').on('click', function () {
+                        delete files[index]; //删除对应的文件
+                        tr.remove();
+                        uploadListIns.config.elem.next()[0].value = ''; //清空 input file 值，以免删除后出现同名文件不可选
+                    });
+
+                    that.elemList.append(tr);
+                   // element.render('progress'); //渲染新加的进度条组件
+
+                });
+            }
+            , done: function (res, index, upload) { //成功的回调
+                var that = this;
+                var tr = that.elemList.find('tr#upload-' + index)
+                    , tds = tr.children();
+                tds.eq(3).html(''); //清空操作
+                delete this.files[index]; //删除文件队列已经上传成功的文件
+                return;
+                this.error(index, upload);
+            }
+            , allDone: function (obj) { //多文件上传完毕后的状态回调
+            }
+            , error: function (index, upload) { //错误回调
+                var that = this;
+                var tr = that.elemList.find('tr#upload-' + index)
+                    , tds = tr.children();
+                //tds.eq(3).find('.demo-reload').removeClass('layui-hide'); //显示重传
+            }
         });
 
         $("#btn_back").on("click", function () {
