PC端个人问题列表，显示完修图片

--- a/888repair/Views/Repair/RepairDetailVw.cshtml
+++ b/888repair/Views/Repair/RepairDetailVw.cshtml
@@ -113,7 +113,7 @@
                     <div class="layui-input-inline">
                         <textarea id="ReplyContent" style="font-size:large;width:300%;height:170px" readonly />
                     </div>
-                    <div id="imgId">
+                    <div id="imgId2">
                     </div>
                 </td>
             </tr>
