--- a/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
+++ b/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
@@ -805,8 +805,12 @@
         });
 
         $("#btn_back").on("click", function () {
-             var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
-             $("#content").load(url);
+            var url = "@(Url.Action("ReplyRepairIndex", "Repair"))";
+            var sId2 = window.location.href;
+            var dd = sId2.split('?');
+            var dd1 = dd[0];
+            history.replaceState(null, null, dd1);
+            $("#content").load(url);
         });
     });
 </script>
