--- a/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
+++ b/888repair/Views/Repair/ReplyRepairDetailVw.cshtml
@@ -261,7 +261,68 @@
     </form>
 </div>
 <script>
-    
+    function queryDetailVw(RepairId) {
+         $.ajax({
+             url: "@(Url.Action("getRepairDetail", "Repair"))",   // 要提交的URL路径
+             type: "post",    // 发送请求的方式
+             data: { RepairId: RepairId },
+                dataType: "JSON",     // 指定传输的数据格式
+             success: function (res) {
+                 //取到的数据存储到localStorage
+                 localStorage.clear();
+                 localStorage.setItem("RepairId", res.RepairId);
+                 localStorage.setItem("Stu_Name", res.Stu_Name);
+                 localStorage.setItem("SystemCategory", res.SystemCategory);
+                 localStorage.setItem("Building", res.Building);
+                 localStorage.setItem("Loaction", res.Loaction);
+                 localStorage.setItem("ChargeEmpno", res.ChargeEmpno);
+                 localStorage.setItem("ChargeEmpname", res.ChargeEmpname);
+                 localStorage.setItem("Category", res.Category);
+                 localStorage.setItem("ResponseContent", res.ResponseContent);
+                 localStorage.setItem("ResponseEmpname", res.ResponseEmpname);
+                 localStorage.setItem("ReplyContent", res.ReplyContent);
+                 localStorage.setItem("Status", res.Status);
+                 localStorage.setItem("CreatTime", res.CreatTime);
+                 localStorage.setItem("FinishTime", res.FinishTime);
+                 localStorage.setItem("PhotoPath", res.PhotoPath);
+                 localStorage.setItem("RoomNum", res.RoomNum);
+                 localStorage.setItem("RepairTime", res.RepairTime);
+                 localStorage.setItem("Telephone", res.Telephone);
+                 localStorage.setItem("DamageReason", res.DamageReason);
+                 localStorage.setItem("DamageClass", res.DamageClass);
+                 localStorage.setItem("DamageName", res.DamageName); 
+                 localStorage.setItem("ReplyPhoto", res.ReplyPhoto);
+                 //原窗口打开新页面
+                 @*var url = "@(Url.Action("ReplyRepairDetailVw", "Repair"))" + "?RepairId=" + RepairId;;
+                 $("#content").load(url);*@
+
+                 $("#RepairId").html(localStorage.getItem("RepairId"));
+                 $("#ResponseContent").html(localStorage.getItem("ResponseContent") == "null" ? '' : localStorage.getItem("ResponseContent"));
+                 $("#SystemCategory").html(localStorage.getItem("SystemCategory"));
+                 $("#Building").html(localStorage.getItem("Building"));
+                 $("#Loaction").html(localStorage.getItem("Loaction"));
+                 $("#ChargeEmpname").html(localStorage.getItem("ChargeEmpname"));
+                 $("#RoomNum").html(localStorage.getItem("RoomNum"));
+                 $("#ResponseEmpname").html(localStorage.getItem("ResponseEmpname"));
+                 $("#Telephone").html(localStorage.getItem("Telephone"));
+                 $("#RepairTime").html(localStorage.getItem("RepairTime") == "null" ? '' : localStorage.getItem("RepairTime"));
+                 $("#Category").html(localStorage.getItem("Category"));
+                 $("#DamageReason").html(localStorage.getItem("DamageReason"));
+                 $("#DamageClass").html(localStorage.getItem("DamageClass"));
+                 $("#DamageName").html(localStorage.getItem("DamageName"));
+                 $("#CreatTime").html(formatDate(localStorage.getItem("CreatTime"), 'yyyy-MM-dd HH:mm:ss'));
+                 $("#ReplyContent").html(localStorage.getItem("ReplyContent") == "null" ? '' : localStorage.getItem("ReplyContent"));
+                 $("#FinishTime").html(localStorage.getItem("FinishTime") == "null" ? '' : formatDate(localStorage.getItem("CreatTime"), 'yyyy-MM-dd HH:mm:ss'));
+        //localStorage.clear();
+             },
+             error: function () {
+                 console.log("失败");
+                 alert(res.Msg);
+             }
+
+         });
+     }
+
     function loadImg() {
         //遍历图片 PhotoPath
         if (localStorage.getItem("PhotoPath") != null && localStorage.getItem("PhotoPath") != '' && localStorage.getItem("PhotoPath") != 'null') {
@@ -311,6 +372,11 @@
 
         var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHH");
         var empno = '@(Session["EmpNo"])';
+
+        var newURL = '@(Session["URL"])';
+        var dd = newURL.split('?');
+        var dd1 = dd[1];
+        queryDetailVw(dd1);
 
         loadImg();
         
@@ -422,26 +488,7 @@
         {
             $("#btngroup").hide();
         }
-
-        $("#RepairId").html(localStorage.getItem("RepairId"));
-        $("#ResponseContent").html(localStorage.getItem("ResponseContent") == "null" ? '' : localStorage.getItem("ResponseContent"));
-        $("#SystemCategory").html(localStorage.getItem("SystemCategory"));
-        $("#Building").html(localStorage.getItem("Building"));
-        $("#Loaction").html(localStorage.getItem("Loaction"));
-        $("#ChargeEmpname").html(localStorage.getItem("ChargeEmpname"));
-        $("#RoomNum").html(localStorage.getItem("RoomNum"));
-        $("#ResponseEmpname").html(localStorage.getItem("ResponseEmpname"));
-        $("#Telephone").html(localStorage.getItem("Telephone"));
-        $("#RepairTime").html(localStorage.getItem("RepairTime") == "null" ? '' : localStorage.getItem("RepairTime"));
-        $("#Category").html(localStorage.getItem("Category"));
-        $("#DamageReason").html(localStorage.getItem("DamageReason"));
-        $("#DamageClass").html(localStorage.getItem("DamageClass"));
-        $("#DamageName").html(localStorage.getItem("DamageName"));
-        $("#CreatTime").html(formatDate(localStorage.getItem("CreatTime"), 'yyyy-MM-dd HH:mm:ss'));
-        $("#ReplyContent").html(localStorage.getItem("ReplyContent") == "null" ? '' : localStorage.getItem("ReplyContent"));
-        $("#FinishTime").html(localStorage.getItem("FinishTime") == "null" ? '' : formatDate(localStorage.getItem("CreatTime"), 'yyyy-MM-dd HH:mm:ss'));
-        //localStorage.clear();
-
+        
         form.on('submit(demo1)', function () {
             var filesUpload = $("#buttonDiv");
             var filesUploadBtn = filesUpload.find('button')[0];
